--- a/archives/toutiao-search/2024-04-19.md
+++ b/archives/toutiao-search/2024-04-19.md
@@ -1,56 +1,73 @@
 # 2024-04-19
 
-共 142 条
+共 159 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Fri Apr 19 2024 09:40:47 GMT+0800 (China Standard Time) -->
-1. [华为Pura70系列4款机型有何区别](https://so.toutiao.com/search?keyword=华为Pura70系列4款机型有何区别)
-1. [巴勒斯坦入联决议草案遭美一票否决](https://so.toutiao.com/search?keyword=巴勒斯坦入联决议草案遭美一票否决)
+<!-- 最后更新时间 Fri Apr 19 2024 10:17:38 GMT+0800 (China Standard Time) -->
+1. [外媒：美方证实以色列导弹击中伊朗](https://so.toutiao.com/search?keyword=外媒：美方证实以色列导弹击中伊朗)
+1. [伊朗等多地传出爆炸声](https://so.toutiao.com/search?keyword=伊朗等多地传出爆炸声)
 1. [三个关键词透视中国经济2024年首季报](https://so.toutiao.com/search?keyword=三个关键词透视中国经济2024年首季报)
-1. [以媒：伊朗等多地传出爆炸声](https://so.toutiao.com/search?keyword=以媒：伊朗等多地传出爆炸声)
+1. [华为Pura70系列4款机型有何区别](https://so.toutiao.com/search?keyword=华为Pura70系列4款机型有何区别)
 1. [25岁女子被丈夫割喉杀害案宣判](https://so.toutiao.com/search?keyword=25岁女子被丈夫割喉杀害案宣判)
+1. [巴勒斯坦入联决议草案遭美一票否决](https://so.toutiao.com/search?keyword=巴勒斯坦入联决议草案遭美一票否决)
+1. [男子开宝马撞人致6死 被执行死刑](https://so.toutiao.com/search?keyword=男子开宝马撞人致6死+被执行死刑)
 1. [燃气费1.5万女子：无奈交费恢复用气](https://so.toutiao.com/search?keyword=燃气费1.5万女子：无奈交费恢复用气)
-1. [联合国秘书长呼吁帮助巴勒斯坦建国](https://so.toutiao.com/search?keyword=联合国秘书长呼吁帮助巴勒斯坦建国)
 1. [湖人可否报上赛季西决遭横扫之仇](https://so.toutiao.com/search?keyword=湖人可否报上赛季西决遭横扫之仇)
-1. [一袋零件9万美元 美议员斥美军腐败](https://so.toutiao.com/search?keyword=一袋零件9万美元+美议员斥美军腐败)
-1. [自驾游为省钱睡车里可行吗](https://so.toutiao.com/search?keyword=自驾游为省钱睡车里可行吗)
-1. [周杰伦演唱会喊话西湖边唱歌大爷](https://so.toutiao.com/search?keyword=周杰伦演唱会喊话西湖边唱歌大爷)
+1. [81岁大爷以25元的价格嫖娼被处罚](https://so.toutiao.com/search?keyword=81岁大爷以25元的价格嫖娼被处罚)
+1. [俄媒：伊朗找到攻破以色列防御办法](https://so.toutiao.com/search?keyword=俄媒：伊朗找到攻破以色列防御办法)
 1. [“福州发生航空器安全事故”不实](https://so.toutiao.com/search?keyword=“福州发生航空器安全事故”不实)
 1. [关晓彤白纱高定短裙](https://so.toutiao.com/search?keyword=关晓彤白纱高定短裙)
-1. [81岁大爷以25元的价格嫖娼被处罚](https://so.toutiao.com/search?keyword=81岁大爷以25元的价格嫖娼被处罚)
+1. [国乒7人挺进单打世界杯8强](https://so.toutiao.com/search?keyword=国乒7人挺进单打世界杯8强)
 1. [老人给城管下跪 当事人暂停工作](https://so.toutiao.com/search?keyword=老人给城管下跪+当事人暂停工作)
-1. [华为：期望Mate70带着纯血鸿蒙上市](https://so.toutiao.com/search?keyword=华为：期望Mate70带着纯血鸿蒙上市)
-1. [美菲军演将击沉中国制造的菲补给舰](https://so.toutiao.com/search?keyword=美菲军演将击沉中国制造的菲补给舰)
-1. [迪拜机场因强降雨被淹](https://so.toutiao.com/search?keyword=迪拜机场因强降雨被淹)
-1. [解放军位中缅边境演习画面公布](https://so.toutiao.com/search?keyword=解放军位中缅边境演习画面公布)
-1. [英国革命共产党成立剑桥支部](https://so.toutiao.com/search?keyword=英国革命共产党成立剑桥支部)
-1. [广东中山市原市长危伟汉被查](https://so.toutiao.com/search?keyword=广东中山市原市长危伟汉被查)
 1. [肯尼亚国防军司令坠机身亡](https://so.toutiao.com/search?keyword=肯尼亚国防军司令坠机身亡)
-1. [专家鼓励买下铺的年轻人跟老人换位](https://so.toutiao.com/search?keyword=专家鼓励买下铺的年轻人跟老人换位)
-1. [理想L6上市 24.98万元起](https://so.toutiao.com/search?keyword=理想L6上市+24.98万元起)
-1. [反对调休的声音不能装作听不到](https://so.toutiao.com/search?keyword=反对调休的声音不能装作听不到)
-1. [谷雨民俗知多少](https://so.toutiao.com/search?keyword=谷雨民俗知多少)
-1. [律师解读老人向城管下跪事件](https://so.toutiao.com/search?keyword=律师解读老人向城管下跪事件)
-1. [英前首相：若乌失败西方霸权将终结](https://so.toutiao.com/search?keyword=英前首相：若乌失败西方霸权将终结)
-1. [雷军：我和马斯克都推动了社会进步](https://so.toutiao.com/search?keyword=雷军：我和马斯克都推动了社会进步)
-1. [特斯拉前员工：入职7天被裁](https://so.toutiao.com/search?keyword=特斯拉前员工：入职7天被裁)
-1. [傅聪：不能回避巴勒斯坦人建国夙愿](https://so.toutiao.com/search?keyword=傅聪：不能回避巴勒斯坦人建国夙愿)
-1. [美团CEO王兴点评理想L6](https://so.toutiao.com/search?keyword=美团CEO王兴点评理想L6)
-1. [混血女孩一口纯正河南话惊呆网友](https://so.toutiao.com/search?keyword=混血女孩一口纯正河南话惊呆网友)
+1. [李若彤想吃就吃从不节食](https://so.toutiao.com/search?keyword=李若彤想吃就吃从不节食)
+1. [五一不调休可行吗](https://so.toutiao.com/search?keyword=五一不调休可行吗)
+1. [华为：期望Mate70带着纯血鸿蒙上市](https://so.toutiao.com/search?keyword=华为：期望Mate70带着纯血鸿蒙上市)
+1. [周杰伦说西湖大爷咬字比自己清楚](https://so.toutiao.com/search?keyword=周杰伦说西湖大爷咬字比自己清楚)
+1. [解放军位中缅边境演习画面公布](https://so.toutiao.com/search?keyword=解放军位中缅边境演习画面公布)
+1. [美菲军演将击沉中国制造的菲补给舰](https://so.toutiao.com/search?keyword=美菲军演将击沉中国制造的菲补给舰)
+1. [“王婆”变“李婆” 万岁山还火吗](https://so.toutiao.com/search?keyword=“王婆”变“李婆”+万岁山还火吗)
+1. [自驾游为省钱睡车里可行吗](https://so.toutiao.com/search?keyword=自驾游为省钱睡车里可行吗)
 1. [上海城超闭店前天天果园金蝉脱壳](https://so.toutiao.com/search?keyword=上海城超闭店前天天果园金蝉脱壳)
+1. [雷军：我和马斯克都推动了社会进步](https://so.toutiao.com/search?keyword=雷军：我和马斯克都推动了社会进步)
+1. [反对调休的声音不能装作听不到](https://so.toutiao.com/search?keyword=反对调休的声音不能装作听不到)
+1. [广东中山市原市长危伟汉被查](https://so.toutiao.com/search?keyword=广东中山市原市长危伟汉被查)
+1. [专家鼓励买下铺的年轻人跟老人换位](https://so.toutiao.com/search?keyword=专家鼓励买下铺的年轻人跟老人换位)
+1. [美媒：以色列已成内部分裂的国家](https://so.toutiao.com/search?keyword=美媒：以色列已成内部分裂的国家)
+1. [理想L6上市 24.98万元起](https://so.toutiao.com/search?keyword=理想L6上市+24.98万元起)
+1. [连风都在偏爱周也](https://so.toutiao.com/search?keyword=连风都在偏爱周也)
+1. [英前首相：若乌失败西方霸权将终结](https://so.toutiao.com/search?keyword=英前首相：若乌失败西方霸权将终结)
+1. [如何满足群众对出行体验的更高期待](https://so.toutiao.com/search?keyword=如何满足群众对出行体验的更高期待)
+1. [陈建斌蒋勤勤北影节互动](https://so.toutiao.com/search?keyword=陈建斌蒋勤勤北影节互动)
+1. [律师解读老人向城管下跪事件](https://so.toutiao.com/search?keyword=律师解读老人向城管下跪事件)
+1. [联合国秘书长呼吁帮助巴勒斯坦建国](https://so.toutiao.com/search?keyword=联合国秘书长呼吁帮助巴勒斯坦建国)
 1. [男子酒后骚扰女孩还打家长](https://so.toutiao.com/search?keyword=男子酒后骚扰女孩还打家长)
-1. [曝甘肃一管道向河道排大量黑色污水](https://so.toutiao.com/search?keyword=曝甘肃一管道向河道排大量黑色污水)
-1. [欧洲委员会议会大会批准科索沃加入](https://so.toutiao.com/search?keyword=欧洲委员会议会大会批准科索沃加入)
+1. [蒋勤勤北京电影节摔倒后报平安](https://so.toutiao.com/search?keyword=蒋勤勤北京电影节摔倒后报平安)
+1. [美团CEO王兴点评理想L6](https://so.toutiao.com/search?keyword=美团CEO王兴点评理想L6)
 1. [9岁男孩校门口被同学家长殴打住院](https://so.toutiao.com/search?keyword=9岁男孩校门口被同学家长殴打住院)
-1. [美媒：中国不是美国可拥有或指挥的](https://so.toutiao.com/search?keyword=美媒：中国不是美国可拥有或指挥的)
+1. [特斯拉前员工：入职7天被裁](https://so.toutiao.com/search?keyword=特斯拉前员工：入职7天被裁)
+1. [德黑兰东部发生火灾致6死](https://so.toutiao.com/search?keyword=德黑兰东部发生火灾致6死)
+1. [曝甘肃一管道向河道排大量黑色污水](https://so.toutiao.com/search?keyword=曝甘肃一管道向河道排大量黑色污水)
+1. [王心凌演唱会上都是“霸总”](https://so.toutiao.com/search?keyword=王心凌演唱会上都是“霸总”)
 1. [姑父强奸猥亵侄女7年被判十三年](https://so.toutiao.com/search?keyword=姑父强奸猥亵侄女7年被判十三年)
+1. [一袋零件9万美元 美议员斥美军腐败](https://so.toutiao.com/search?keyword=一袋零件9万美元+美议员斥美军腐败)
+1. [周冠宇：我希望能站上F1领奖台](https://so.toutiao.com/search?keyword=周冠宇：我希望能站上F1领奖台)
+1. [网友谈电视没人看：多个频道在卖药](https://so.toutiao.com/search?keyword=网友谈电视没人看：多个频道在卖药)
+1. [9岁男孩疑似因长期体罚跳楼身亡](https://so.toutiao.com/search?keyword=9岁男孩疑似因长期体罚跳楼身亡)
+1. [以媒：伊朗等多地传出爆炸声](https://so.toutiao.com/search?keyword=以媒：伊朗等多地传出爆炸声)
+1. [周杰伦演唱会喊话西湖边唱歌大爷](https://so.toutiao.com/search?keyword=周杰伦演唱会喊话西湖边唱歌大爷)
+1. [迪拜机场因强降雨被淹](https://so.toutiao.com/search?keyword=迪拜机场因强降雨被淹)
+1. [英国革命共产党成立剑桥支部](https://so.toutiao.com/search?keyword=英国革命共产党成立剑桥支部)
+1. [谷雨民俗知多少](https://so.toutiao.com/search?keyword=谷雨民俗知多少)
+1. [傅聪：不能回避巴勒斯坦人建国夙愿](https://so.toutiao.com/search?keyword=傅聪：不能回避巴勒斯坦人建国夙愿)
+1. [混血女孩一口纯正河南话惊呆网友](https://so.toutiao.com/search?keyword=混血女孩一口纯正河南话惊呆网友)
+1. [欧洲委员会议会大会批准科索沃加入](https://so.toutiao.com/search?keyword=欧洲委员会议会大会批准科索沃加入)
+1. [美媒：中国不是美国可拥有或指挥的](https://so.toutiao.com/search?keyword=美媒：中国不是美国可拥有或指挥的)
 1. [胡歌红毯推游本昌轮椅入场](https://so.toutiao.com/search?keyword=胡歌红毯推游本昌轮椅入场)
 1. [央媒评体育馆禁群众入内：为谁而建](https://so.toutiao.com/search?keyword=央媒评体育馆禁群众入内：为谁而建)
 1. [男子开挖掘机去西藏变身318补路工](https://so.toutiao.com/search?keyword=男子开挖掘机去西藏变身318补路工)
 1. [新一轮省级机构改革有何特点](https://so.toutiao.com/search?keyword=新一轮省级机构改革有何特点)
-1. [网友谈电视没人看：多个频道在卖药](https://so.toutiao.com/search?keyword=网友谈电视没人看：多个频道在卖药)
 1. [网友：五一不是放假而是假放](https://so.toutiao.com/search?keyword=网友：五一不是放假而是假放)
-1. [9岁男孩疑似因长期体罚跳楼身亡](https://so.toutiao.com/search?keyword=9岁男孩疑似因长期体罚跳楼身亡)
 1. [山东男子李先进坚持施救落水儿童](https://so.toutiao.com/search?keyword=山东男子李先进坚持施救落水儿童)
 1. [小伙称退租遭中介提灯定损索赔上万](https://so.toutiao.com/search?keyword=小伙称退租遭中介提灯定损索赔上万)
 1. [伊朗总统在阅兵式上喊话以色列](https://so.toutiao.com/search?keyword=伊朗总统在阅兵式上喊话以色列)
